--- a/ALICE_RAA.ipynb
+++ b/ALICE_RAA.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Zoznem dostupných centralít:\n",
+    "    Zoznam dostupných centralít:\n",
     " \n",
     "     0-5%, 0-10%, 5-10%, 10-20%, 20-30%, 30-40%, 40-50%, 50-60%, 60-70%, 70-80%, 80-90%\n",
     "    "
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Počíanie zrážok"
+    "    Počítanie zrážok"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   Pridanie stĺpcov do tabuľku s dátami pre každú centralitu"
+    "Pridanie stĺpcov do tabuľky s dátami pre každú centralitu"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Naplnenie informácie o centralite a určenie počtu zrážok pre jeden centralitný interval"
+    "Naplnenie informácie o centralite a určenie počtu zrážok pre jeden centralitný interval"
    ]
   },
   {
@@ -221,7 +221,7 @@
     "plt.errorbar(bins[:-1], hTPC_0_100, yerr=hTPC_0_100_err, fmt='g+', label='0-100%')\n",
     "plt.errorbar(bins[:-1], hTPC_60_70, yerr=hTPC_60_70_err, fmt='b+', label='60-70%')\n",
     "plt.errorbar(bins[:-1], hTPC_70_80, yerr=hTPC_70_80_err, fmt='r+', label='70-80%')\n",
-    "#zu den Einstllungen unter 'fmt' ist folgende Seite nützlich\n",
+    "#pre zoznam možných nastavení 'fmt' pozrite stránku:\n",
     "#https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot\n",
     "\n",
     "plt.xlabel('Number of TPC tracks')\n",
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    2D-obrázok: Počet častíc v zrážke ako funkcia centrality zrážky "
+    "2D-obrázok: Počet častíc v zrážke ako funkcia centrality zrážky "
    ]
   },
   {
@@ -258,14 +258,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Dráhy častíc a hybnostné spektrá "
+    "#2. Dráhy častíc a hybnostné spektrá "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Zoznem dostupných centralít:",
+    "Zoznam dostupných centralít:",
     " \n",
     "     0-5%, 0-10%, 5-10%, 10-20%, 20-30%, 30-40%, 40-50%, 50-60%, 60-70%, 70-80%, 80-90%"
    ]
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Number of tracks: '38042122'! ~600MB Datei (ungepackt)\")"
+    "print(\"Number of tracks: '38042122'! ~600MB Datei (nerozbalený)\")"
    ]
   },
   {
@@ -356,7 +356,7 @@
     "hPbPb_60_70 = hPbPb_60_70 / dictEventsCent['60-70']\n",
     "\n",
     "hPbPb_70_80, _ = np.histogram(dictMomCent['70-80'], binsPt)\n",
-    "# Spezialfall für 70-80%, ein Bin ist Null - problematisch für spätere Division - daher 0 durch 1 ersetzen\n",
+    "# Pre centralitu 70-80% má jeden bin nulovú hodnotu - týmto histogramom potrebujeme následne deliť - preto nahradíme nulový bin jednotkou\n",
     "hPbPb_70_80 = np.where(hPbPb_70_80==0,1,hPbPb_70_80)\n",
     "hPbPb_70_80_err = np.sqrt(hPbPb_70_80) / dictEventsCent['70-80']\n",
     "hPbPb_70_80 = hPbPb_70_80 / binWidth\n",
@@ -378,7 +378,7 @@
    "source": [
     "pp = np.genfromtxt('pp_reference.dat')\n",
     "print(pp)\n",
-    "pp_err = np.divide(pp,10) #Annahme: 10% Fehler auf der pp Messung"
+    "pp_err = np.divide(pp,10) #Predpoklad: 10% chyba pre meranie v pp zrážkach"
    ]
   },
   {
