--- a/ALICE_RAA_python_uvod.ipynb
+++ b/ALICE_RAA_python_uvod.ipynb
@@ -26,15 +26,15 @@
    "source": [
     "## Cvičenie:\n",
     "\n",
-    "Je definovaná premenná b, ktorej hodnota je 5. Každú premennú vieme nechať vypísať pomocou funkcie print(). Ak by sme ako argument zadali type(b), táto funkcia by nám vypísala, aký je b typ premennej..\n",
+    "Je definovaná premenná b, ktorej hodnota je 5. Každú premennú vieme nechať vypísať pomocou funkcie print(). Ak by sme ako argument zadali type(b), táto funkcia by nám vypísala, aký je b typ premennej.\n",
     "\n",
-    "Potom ako sputíte kód, vypracujte nasledujúce úlohy, ktorých kód vložíte do tej istej bunky:\n",
+    "Potom ako sputíte kód v nasledujúcej bunke, vypracujte nasledujúce úlohy, ktorých kód vložíte do tej istej bunky:\n",
     "\n",
     "- Definujte premennú 'a' a priraďte jej nejakú číselnú hodnotu\n",
     "\n",
     "- Definujte premennú 'text' a priraďte jej 'string'\n",
     "\n",
-    "- Definujte premennú 'c' ako súčin 'a' a 'b' a nechjte vypísať výsledok pomocou funkcie  print(c).\n",
+    "- Definujte premennú 'c' ako súčin 'a' a 'b' a nechajte vypísať výsledok pomocou funkcie  print(c).\n",
     "\n",
     "- Čo sa stane ak ?\n",
     "    - print(2 * a)\n",
@@ -73,7 +73,7 @@
     "\n",
     "a = 3.2\n",
     "\n",
-    "text = \"Hallo Welt!\"\n",
+    "text = \"Hello World!\"\n",
     "\n",
     "c = a * b\n",
     "\n",
@@ -93,16 +93,16 @@
    "source": [
     "# if else\n",
     "\n",
-    "Pomocou príkazu if môžu byť otestované podmienky, za ktorých sa má niečo konkrétne stať. \n",
+    "Pomocou príkazu 'if' môžu byť otestované podmienky, za ktorých sa má niečo konkrétne stať. \n",
     "\n",
     "Ak je daná podmienka splnená, teda je pravdivá, vykoná sa kód za podmienkou.\n",
     "\n",
-    "Ak daná podmienka nie je splnená, teda je neprevdivá, je možné overiť iné podmienky pomocou príkazu 'elif'.\n",
+    "Ak daná podmienka nie je splnená, teda je nepravdivá, je možné overiť iné podmienky pomocou príkazu 'elif'.\n",
     "\n",
-    "Ak už nie je iná explicitná podmienka, ktorú možno overiť, vy koná sa kód za príkazom else (presne vtedy, ak sú všetky predchádzajúce podmienky nepravdivé).\n",
+    "Ak už nie je iná explicitná podmienka, ktorú možno overiť, vykoná sa kód za príkazom 'else' (presne vtedy, ak sú všetky predchádzajúce podmienky nepravdivé).\n",
     "\n",
     "## Cvičenie:\n",
-    "Spusti naslednujúci kód a následne nastav rôzne hodnoty pre premenné 'a' a 'b', aby si vyskúšal vštky možnosti:"
+    "Spustite naslednujúci kód a následne nastavte rôzne hodnoty pre premenné 'a' a 'b', aby ste si vyskúšali všetky možnosti:"
    ]
   },
   {
@@ -113,9 +113,9 @@
    "source": [
     "\n",
     "if a>b:\n",
-    "    print('a je väčšie ako  b')\n",
+    "    print('a je väčšie ako b')\n",
     "elif a==b:\n",
-    "    print('a a b ssú rovnako veľké')\n",
+    "    print('a a b sú rovnako veľké')\n",
     "else:\n",
     "    print('b je väčšie ako a')"
    ]
@@ -162,9 +162,9 @@
     "\n",
     "vstup = input(\"Zadajte vstup pomocou klávesnice a potvrďte s Enter: \")\n",
     "\n",
-    "požiadaj o dva vstupy a over pomocou if/else podmienky, či sú vstupy rovnaké.\n",
+    "požiadaj o dva vstupy a over pomocou 'if/else' podmienky, či sú vstupy rovnaké.\n",
     "\n",
-    "Ak áno, vypíš \"Rovnaké Vstupy\" inak \"Rozdielne Vstupy\" "
+    "Ak áno, vypíš \"Rovnaké vstupy\" inak \"Rozdielne vstupy\" "
    ]
   },
   {
@@ -196,9 +196,9 @@
     "print(vstup1, vstup2)\n",
     "\n",
     "if( vstup1 == vstup2):\n",
-    "    print(\"Rovnaké Vstupy\")\n",
+    "    print(\"Rovnaké vstupy\")\n",
     "else:\n",
-    "    print(\"Rozdielne Vstupy\")"
+    "    print(\"Rozdielne vstupy\")"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "\n",
     "## Cvičenie:\n",
     "\n",
-    "Vyskúšaj nasledujúci kód\n",
+    "Vyskúšajte nasledujúci kód\n",
     "\n",
     "    for i in range (0,15):\n",
     "        print(i**2)\n",
@@ -254,7 +254,7 @@
    "source": [
     "## Cvičenie:\n",
     "\n",
-    "Napíš kód obsahujúci for cyklus a if/else podmienku, kde necháš vypísať druhú mocninu čísel od 0 po 14 spolu s informáciou, či je dané číslo väčšie alebo menšie ako 100. Dávaj pozor na správne zarovnanie."
+    "Napíšte kód obsahujúci for cyklus a 'if/else' podmienku, kde necháte vypísať druhú mocninu čísel od 0 po 14 spolu s informáciou, či je dané číslo väčšie alebo menšie ako 100. Dávajte pozor na správne zarovnanie."
    ]
   },
   {
@@ -278,11 +278,11 @@
     "for i in range(0,15):\n",
     "    quadrat = i**2\n",
     "    if( quadrat > 100 ):\n",
-    "        print(str(quadrat) + \" je väčšie ako 100!\")\n",
+    "        print(str(quadrat) + \" je väčšie ako 100\")\n",
     "    elif ( quadrat < 100):\n",
-    "        print(str(quadrat) + \" je menšie ako 100!\")\n",
+    "        print(str(quadrat) + \" je menšie ako 100\")\n",
     "    else:\n",
-    "        print(str(quadrat) + \" je rovné 100!\")"
+    "        print(str(quadrat) + \" je rovné 100\")"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "source": [
     "# Polia:\n",
     "\n",
-    "Pole je zoradenie premenných rovnakého typu, ktorý môže byť zavolaný ako celok, alebo jednotlivé zložky samostatne. \n",
+    "Pole je zoradenie premenných rovnakého typu, ktoré môže byť zavolané ako celok, alebo jednotlivé zložky samostatne. \n",
     "Pre zadanie polohy vrámci poľa sa začína počítať od 0. \n",
     "\n",
     "Poloha sa zadáva v hranatej zátvorke. Príklad v nasledujúcej bunke:"
@@ -344,12 +344,12 @@
    "source": [
     "## Cvičenie:\n",
     "\n",
-    "- Zadefinuj pole 'dni' pre všetky dni v týždni \n",
+    "- Zadefinujte pole 'dni' pre všetky dni v týždni \n",
     "- Čo sa stane po zadaní nasledjúcich príkazov?:\n",
     "    - print(dni[0:3])\n",
     "    - print(dni[-3:])\n",
-    "    \n",
-    "- Napíš for cyklus a nechaj vypísať všetky dni v týždni \n",
+    "\n",
+    "- Napíšte for cyklus a nechajte vypísať všetky dni v týždni \n",
     "    - ak je deň končí na \"ok\", vypíšte navyše \"... končí na OK!\" "
    ]
   },
@@ -378,7 +378,7 @@
     "\n",
     "for z in dni:\n",
     "    print(z)\n",
-    "    if( z[-ľ:] == \"ok\"):\n",
+    "    if( z[-2:] == \"ok\"):\n",
     "        print(\"...končí na OK!\")"
    ]
   },
@@ -408,14 +408,14 @@
     "V tomto príklade vynesieme 6 hodnôt na x-ovú a y-ovú os. \n",
     "\n",
     "Pomocou príkazu fmt môžme zmeniť farbu a štýl zobrazeného bodu.<br>\n",
-    "r=cerveba<br>\n",
-    "g=zelena<br>\n",
-    "y=zlta<br>\n",
+    "r=red<br>\n",
+    "g=green<br>\n",
+    "y=zellow<br>\n",
     "m=magenta<br>\n",
-    "k=cierna<br>\n",
+    "k=black<br>\n",
     "c=cyan<br>\n",
-    "w=biela<br>\n",
-    "b=modra<br>\n",
+    "w=white<br>\n",
+    "b=blue<br>\n",
     "'.' \tpoint marker<br>\n",
     "',' \tpixel marker<br>\n",
     "'o' \tcircle marker<br>\n",
@@ -457,7 +457,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pomocou Numpy je mopžné zobrazovať aj rôzne funkcie. V nasledujúcom príklade rovnomerne rozdelíme 50 hodnôt v intervale 0 až 2*Pi a potom zobrazíme funkciu sin(x)."
+    "Pomocou Numpy je možné zobrazovať aj rôzne funkcie. V nasledujúcom príklade rovnomerne rozdelíme 50 hodnôt v intervale od 0 po 2*Pi a potom zobrazíme funkciu sin(x)."
    ]
   },
   {
@@ -481,11 +481,11 @@
     "Histogramy môžu byť tiež jednoducho zobrazené. \n",
     "\n",
     "Na to vygenerujeme 100000 náhodných čísel z normálneho rozdelenia a následne vynesieme počet jednotlivých hodnôt. \n",
-    "Na to budú vygenerované hodnoty uložené do binov. \n",
-    "Počet binov vieme ľubovoľne nastaviť, pričom šírka sa nastvaí automaticky ako (max-min)/pocet.\n",
+    "Potom budú vygenerované hodnoty uložené do binov. \n",
+    "Počet binov vieme ľubovoľne nastaviť, pričom šírka sa nastaví automaticky ako (max-min)/pocet.\n",
     "\n",
-    "- Spusti nasledujúci kód\n",
-    "    - Zvýš 'size' o faktor 10. Čo sa stane? Kedy vieme pozorovať typický zvončekový tvar rozdelenia?"
+    "- Spustite nasledujúci kód\n",
+    "    - Zvýšte 'size' o faktor 10. Čo sa stane? Kedy vieme pozorovať typický zvončekový tvar rozdelenia?"
    ]
   },
   {
@@ -499,7 +499,7 @@
     "\n",
     "plt.hist(gaussian_numbers, bins)\n",
     "\n",
-    "plt.title(\"Gauß Histogram\")\n",
+    "plt.title(\"Gauss Histogram\")\n",
     "plt.xlabel(\"Hodnota\")\n",
     "plt.ylabel(\"Početnosť\")\n",
     "plt.show()"
