--- a/ALICE_RAA.ipynb
+++ b/ALICE_RAA.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   Načítanie potrebných knižníc"
+    "Načítanie potrebných knižníc"
    ]
   },
   {
@@ -31,9 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Zoznam dostupných centralít:\n",
+    "Zoznam dostupných centralít:\n",
     " \n",
-    "     0-5%, 0-10%, 5-10%, 10-20%, 20-30%, 30-40%, 40-50%, 50-60%, 60-70%, 70-80%, 80-90%\n",
+    "0-5%, 0-10%, 5-10%, 10-20%, 20-30%, 30-40%, 40-50%, 50-60%, 60-70%, 70-80%, 80-90%\n",
     "    "
    ]
   },
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Vytvorenie slovníkov"
+    "Vytvorenie slovníkov"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Počítanie zrážok"
+    "Počítanie zrážok"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    Načítanie informácií o zrážke z CVS súboru"
+    "Načítanie informácií o zrážke z CVS súboru"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   Vytvorenie a zobrazenie histogramov počtu častíc v zrážke"
+    "Vytvorenie a zobrazenie histogramov počtu častíc v zrážke"
    ]
   },
   {
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#2. Dráhy častíc a hybnostné spektrá "
+    "# 2. Dráhy častíc a hybnostné spektrá "
    ]
   },
   {
@@ -267,7 +267,7 @@
    "source": [
     "Zoznam dostupných centralít:",
     " \n",
-    "     0-5%, 0-10%, 5-10%, 10-20%, 20-30%, 30-40%, 40-50%, 50-60%, 60-70%, 70-80%, 80-90%"
+    "0-5%, 0-10%, 5-10%, 10-20%, 20-30%, 30-40%, 40-50%, 50-60%, 60-70%, 70-80%, 80-90%"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Number of tracks: '38042122'! ~600MB Datei (nerozbalený)\")"
+    "print(\"Number of tracks: '38042122'! ~600MB )\")"
    ]
   },
   {
@@ -468,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RCP_60_70_err = at.fehlerberechnung(hPbPb_60_70, hPbPb_60_70_err, dictNColl['60-70'], hPbPb_70_80, hPbPb_70_80_err, dictNColl['70-80'])"
+    "RCP_60_70_err = at.uncertaintyCalculation(hPbPb_60_70, hPbPb_60_70_err, dictNColl['60-70'], hPbPb_70_80, hPbPb_70_80_err, dictNColl['70-80'])"
    ]
   },
   {
