add example for printing out a value

--- a/ALICE_RAA.ipynb
+++ b/ALICE_RAA.ipynb
@@ -537,11 +537,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Výpis konrétnej hodnoty pre jednú priečnu hybnosť"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+     "print(RAA_60_70[binsPt.index(2)])"
+   ]
+   },
+   {
+    "cell_type": "code",
+    "execution_count": null,
+    "metadata": {},
+    "outputs": [],
+    "source": []
   }
  ],
  "metadata": {
