--- a/ALICE_RAA.ipynb
+++ b/ALICE_RAA.ipynb
@@ -45,7 +45,7 @@
    },
    "outputs": [],
    "source": [
-    "listCentralities = [(60,70), (70,80)]"
+    "listCentralities = [(70,80)]"
    ]
   },
   {
@@ -197,7 +197,6 @@
    "outputs": [],
    "source": [
     "hTPC_0_100, bins = at.create_event_histos(df_events['eventMult'])\n",
-    "hTPC_60_70, bins = at.create_event_histos(df_events[df_events['60-70'] == True]['eventMult'])\n",
     "hTPC_70_80, bins = at.create_event_histos(df_events[df_events['70-80'] == True]['eventMult'])"
    ]
   },
@@ -208,7 +207,6 @@
    "outputs": [],
    "source": [
     "hTPC_0_100_err = np.sqrt(hTPC_0_100)\n",
-    "hTPC_60_70_err = np.sqrt(hTPC_60_70)\n",
     "hTPC_70_80_err = np.sqrt(hTPC_70_80)"
    ]
   },
@@ -219,7 +217,6 @@
    "outputs": [],
    "source": [
     "plt.errorbar(bins[:-1], hTPC_0_100, yerr=hTPC_0_100_err, fmt='g+', label='0-100%')\n",
-    "plt.errorbar(bins[:-1], hTPC_60_70, yerr=hTPC_60_70_err, fmt='b+', label='60-70%')\n",
     "plt.errorbar(bins[:-1], hTPC_70_80, yerr=hTPC_70_80_err, fmt='r+', label='70-80%')\n",
     "#pre zoznam možných nastavení 'fmt' pozrite stránku:\n",
     "#https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot\n",
@@ -237,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2D-obrázok: Počet častíc v zrážke ako funkcia centrality zrážky "
+    "2D-obrázok: Počet častíc v zrážke vs. centralita"
    ]
   },
   {
@@ -246,12 +243,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist2d(df_events['eventMult'],df_events['eventCent'], bins=(200,100), range=[[0, 2000], [0, 100]], cmap=plt.cm.jet, norm=mpl.colors.LogNorm())\n",
-    "\n",
-    "plt.colorbar()\n",
-    "plt.xlabel('Number of TPC tracks')\n",
-    "plt.ylabel('Centrality')\n",
-    "plt.savefig('TPC_tracks_2D.pdf')"
+     "plt.hist2d(df_events['eventCent'],df_events['eventMult'], bins=(100,200), range=[[0, 100],[0, 2000] ], cmap=plt.cm.jet, norm=mpl.colors.LogNorm())\n",
+     "\n",
+     "plt.colorbar()\n",
+     "plt.xlabel('Centrality')\n",
+     "plt.ylabel('Number TPC tracks')\n",
    ]
   },
   {
@@ -357,14 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hPbPb_60_70, _ = np.histogram(dictMomCent['60-70'], binsPt)\n",
-    "hPbPb_60_70_err = np.sqrt(hPbPb_60_70) / dictEventsCent['60-70']\n",
-    "hPbPb_60_70 = hPbPb_60_70 / binWidth\n",
-    "hPbPb_60_70 = hPbPb_60_70 / dictEventsCent['60-70']\n",
-    "\n",
     "hPbPb_70_80, _ = np.histogram(dictMomCent['70-80'], binsPt)\n",
-    "# Pre centralitu 70-80% má jeden bin nulovú hodnotu - týmto histogramom potrebujeme následne deliť - preto nahradíme nulový bin jednotkou\n",
-    "hPbPb_70_80 = np.where(hPbPb_70_80==0,1,hPbPb_70_80)\n",
     "hPbPb_70_80_err = np.sqrt(hPbPb_70_80) / dictEventsCent['70-80']\n",
     "hPbPb_70_80 = hPbPb_70_80 / binWidth\n",
     "hPbPb_70_80 = hPbPb_70_80 / dictEventsCent['70-80']"
@@ -392,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.5 Zobrazenie spektier priečnej hybnosti pre nabyté častice "
+    "### 2.5 Zobrazenie spektier priečnej hybnosti pre nabité častice "
    ]
   },
   {
@@ -401,7 +390,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.errorbar(binsPt[:-1], hPbPb_60_70, xerr=x_bin_width, yerr=hPbPb_60_70_err, fmt='g.', label='60-70%')\n",
     "plt.errorbar(binsPt[:-1], hPbPb_70_80, xerr=x_bin_width, yerr=hPbPb_70_80_err, fmt='b.', label='70-80%')\n",
     "plt.errorbar(binsPt[:-1], pp,          xerr=x_bin_width, yerr=pp_err,          fmt='y+', label='pp')\n",
     "\n",
@@ -457,7 +445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.7 Výpočet a zobrazenie pomeru R$_{\\text{CP}}$"
+    "### 2.7 Výpočet a zobrazenie pomeru R$_\\text{AA}$"
    ]
   },
   {
@@ -466,47 +454,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RCP_60_70 = np.divide(hPbPb_60_70 / dictNColl['60-70'], hPbPb_70_80 / dictNColl['70-80'])                                                                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RCP_60_70_err = at.uncertaintyCalculation(hPbPb_60_70, hPbPb_60_70_err, dictNColl['60-70'], hPbPb_70_80, hPbPb_70_80_err, dictNColl['70-80'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.errorbar(binsPt[:-1], RCP_60_70, xerr=x_bin_width, yerr=RCP_60_70_err, fmt='b.', label='60-70%')\n",
-    "\n",
-    "plt.ylim(-0.1,2)\n",
-    "plt.xlabel('$p_{T}$')\n",
-    "plt.ylabel(r'$R_{cp}=\\frac{1/N^{AA,X}_{evt}1/<N_{coll,X}>dN^{AA,X}/dp_t}{1/N^{PbPb,per}_{evt}1/<N_{coll,per}>dN^{PbPb,per}/dp_t}$')\n",
-    "plt.legend(loc='upper right')\n",
-    "plt.savefig('RCP_compared.pdf')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.8 Výpočet a zobrazenie pomeru R$_\\text{AA}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RAA_60_70 = np.divide(hPbPb_60_70 / dictNColl['60-70'], pp)\n",
     "RAA_70_80 = np.divide(hPbPb_70_80 / dictNColl['70-80'], pp)"
    ]
   },
@@ -516,7 +463,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RAA_60_70_err = at.uncertaintyCalculation(hPbPb_60_70, hPbPb_60_70_err, dictNColl['60-70'], pp, pp_err, dictNColl['pp'])\n",
     "RAA_70_80_err = at.uncertaintyCalculation(hPbPb_70_80, hPbPb_70_80_err, dictNColl['70-80'], pp, pp_err, dictNColl['pp'])"
    ]
   },
@@ -526,7 +472,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.errorbar(binsPt[:-1], RAA_60_70, xerr=x_bin_width, yerr=RAA_60_70_err, fmt='b.', label='60-70%')\n",
     "plt.errorbar(binsPt[:-1], RAA_70_80, xerr=x_bin_width, yerr=RAA_70_80_err, fmt='g.', label='70-80%')\n",
     "\n",
     "plt.ylim(0.01,1.2)\n",
@@ -540,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Výpis konrétnej hodnoty pre jednú priečnu hybnosť"
+    "Výpis konkrétnej hodnoty pre jednu priečnu hybnosť"
    ]
   },
   {
@@ -549,7 +494,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-     "print(RAA_60_70[binsPt.index(1.65)])"
+     "print(RAA_70_80[binsPt.index(1.65)])"
    ]
    },
    {
