--- a/ALICE_RAA_python_uvod.ipynb
+++ b/ALICE_RAA_python_uvod.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Jupyter Notebook pozostáva z viacerých buniek, ktoré môžu byť spúšťané samostatne. \n",
     "\n",
-    "Bunku možno spustiť stlačním Shift + Enter alebo zvolením možnosti v menu: \"Cell->Run Cell\", potom čo bola označená myšou.\n",
+    "Bunku možno spustiť stlačením Shift + Enter alebo zvolením možnosti v menu: \"Cell->Run\", potom čo bola označená myšou.\n",
     "\n",
     "Celý notebook sa spustí pomocou možnosti v menu \"Cell->Run All\".  "
    ]
@@ -28,7 +28,7 @@
     "\n",
     "Je definovaná premenná b, ktorej hodnota je 5. Každú premennú vieme nechať vypísať pomocou funkcie print(). Ak by sme ako argument zadali type(b), táto funkcia by nám vypísala, aký je b typ premennej.\n",
     "\n",
-    "Potom ako sputíte kód v nasledujúcej bunke, vypracujte nasledujúce úlohy, ktorých kód vložíte do tej istej bunky:\n",
+    "Potom ako spustíte kód v nasledujúcej bunke, vypracujte nasledujúce úlohy, ktorých kód vložíte do tej istej bunky:\n",
     "\n",
     "- Definujte premennú 'a' a priraďte jej nejakú číselnú hodnotu\n",
     "\n",
@@ -102,7 +102,7 @@
     "Ak už nie je iná explicitná podmienka, ktorú možno overiť, vykoná sa kód za príkazom 'else' (presne vtedy, ak sú všetky predchádzajúce podmienky nepravdivé).\n",
     "\n",
     "## Cvičenie:\n",
-    "Spustite naslednujúci kód a následne nastavte rôzne hodnoty pre premenné 'a' a 'b', aby ste si vyskúšali všetky možnosti:"
+    "Spustite nasledujúci kód a následne nastavte rôzne hodnoty pre premenné 'a' a 'b', aby ste si vyskúšali všetky možnosti:"
    ]
   },
   {
@@ -162,9 +162,9 @@
     "\n",
     "vstup = input(\"Zadajte vstup pomocou klávesnice a potvrďte s Enter: \")\n",
     "\n",
-    "požiadaj o dva vstupy a over pomocou 'if/else' podmienky, či sú vstupy rovnaké.\n",
+    "požiadajte o dva vstupy a overte pomocou 'if/else' podmienky, či sú vstupy rovnaké.\n",
     "\n",
-    "Ak áno, vypíš \"Rovnaké vstupy\" inak \"Rozdielne vstupy\" "
+    "Ak áno, vypíšte \"Rovnaké vstupy\" inak \"Rozdielne vstupy\" "
    ]
   },
   {
@@ -292,7 +292,7 @@
     "# Polia:\n",
     "\n",
     "Pole je zoradenie premenných rovnakého typu, ktoré môže byť zavolané ako celok, alebo jednotlivé zložky samostatne. \n",
-    "Pre zadanie polohy vrámci poľa sa začína počítať od 0. \n",
+    "Pre zadanie polohy v rámci poľa sa začína počítať od 0. \n",
     "\n",
     "Poloha sa zadáva v hranatej zátvorke. Príklad v nasledujúcej bunke:"
    ]
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Polia môžu byť aj ľubovľne vložené do seba:"
+    "Polia môžu byť aj ľubovoľne vložené do seba:"
    ]
   },
   {
@@ -345,12 +345,12 @@
     "## Cvičenie:\n",
     "\n",
     "- Zadefinujte pole 'dni' pre všetky dni v týždni \n",
-    "- Čo sa stane po zadaní nasledjúcich príkazov?:\n",
+    "- Čo sa stane po zadaní nasledujúcich príkazov?:\n",
     "    - print(dni[0:3])\n",
     "    - print(dni[-3:])\n",
     "\n",
     "- Napíšte for cyklus a nechajte vypísať všetky dni v týždni \n",
-    "    - ak je deň končí na \"ok\", vypíšte navyše \"... končí na OK!\" "
+    "    - ak sa deň končí na \"ok\", vypíšte navyše \"... končí na OK!\" "
    ]
   },
   {
@@ -407,10 +407,10 @@
    "source": [
     "V tomto príklade vynesieme 6 hodnôt na x-ovú a y-ovú os. \n",
     "\n",
-    "Pomocou príkazu fmt môžme zmeniť farbu a štýl zobrazeného bodu.<br>\n",
+    "Pomocou príkazu fmt môžeme zmeniť farbu a štýl zobrazeného bodu.<br>\n",
     "r=red<br>\n",
     "g=green<br>\n",
-    "y=zellow<br>\n",
+    "y=yellow<br>\n",
     "m=magenta<br>\n",
     "k=black<br>\n",
     "c=cyan<br>\n",
