--- a/ALICE_RAA.ipynb
+++ b/ALICE_RAA.ipynb
@@ -247,7 +247,7 @@
      "\n",
      "plt.colorbar()\n",
      "plt.xlabel('Centrality')\n",
-     "plt.ylabel('Number TPC tracks')\n",
+     "plt.ylabel('Number TPC tracks')\n"
    ]
   },
   {
