update of short version

--- a/ALICE_RAA_kratke.ipynb
+++ b/ALICE_RAA_kratke.ipynb
@@ -60,28 +60,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-     "Teraz chceme prečítať informácie o centralitách a trackoch v špecifických intervaloch. Na to budeme používať for cykly a podmienku if."
-    "Postupujte v nasledjúcich krokoch."
+     "Teraz chceme prečítať informácie o centralitách a trackoch v špecifických intervaloch. Na to budeme používať for cykly a podmienku if.Postupujte v nasledjúcich krokoch."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Vytvorte dve premenné. Do jednej budete pripočítavať zrážky a do druhej tracky v jednotlijvých zrážkach*\n",
+    "# Úloha 1: \n",
     "\n",
-    "- Vytvorte for cyklus idúci cez dĺžku poľa 'centralities' podbne ako v hornej bunke*\n",
+    "## Počet trackov v danej centralite a hybnostnom intervale v Pb-Pb \n",
     "\n",
-    "- Uložte hodnotu centrality do novej premennej *\n",
+    "- Vytvorte dve premenné. Do jednej budete pripočítavať zrážky a do druhej tracky v jednotlijvých zrážkach \n",
     "\n",
-    "- Použijte podmienku if na výber centralít v zadanom intervale*\n",
+    "- Vytvorte for cyklus idúci cez dĺžku poľa 'centralities' podbne ako v hornej bunke \n",
     "\n",
-    "- Ak je podmienka splnená:",
-    "-- Premennú na počet zrážok zvýšte o 1",
-    "-- Vytvorte nový for cyklus, ktorý pôjde cez dĺžku poľa trackov v danoj zrážke (all_tracks_list[i])",
-    "-- Do premennej track_pt uložte hybnosť častice ako float",
-    "-- Pomocou podmienky if skontrolujte, či sa táto hybnosť nachádza v zadanom intervale",
-    "-- Ak je táto podmienka splnená pripočítajte 1 k počtu trackov"
+    "- Uložte hodnotu centrality do novej premennej \n",
+    "\n",
+    "- Použijte podmienku if na výber centralít v zadanom intervale \n",
+    "\n",
+    "- Ak je podmienka splnená: \n",
+    "\n",
+    "   - Premennú na počet zrážok zvýšte o 1 \n",
+    "\n",
+    "   - Vytvorte nový for cyklus, ktorý pôjde cez dĺžku poľa trackov v danoj zrážke (all_tracks_list[i]) \n",
+    "\n",
+    "   - Do premennej track_pt uložte hybnosť častice ako float \n",
+    "\n",
+    "   - Pomocou podmienky if skontrolujte, či sa táto hybnosť nachádza v zadanom intervale \n",
+    "\n",
+    "   - Ak je táto podmienka splnená pripočítajte 1 k počtu trackov \n"
    ]
   },
   {
@@ -98,95 +106,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-     "Ak potrebujete pomôcť tu je čiastočné riešenie:"
+    "# Úloha 1.1: \n",
+    "\n",
+    "## Priemerný počet trackov v danej centralite a hybnostnom intervale v Pb-Pb v jednej zrážke\n",
+    "\n",
+    "- Vypočítajte priemerný počet trackov v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej\n",
+    "\n",
+    "- Nechajte túto hodnotu vypísať \n"
+
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO: Premenná 1 pre počet zrážok\n",
-    "\n",
-    "# TODO: Premenná 2 pre počet trackov\n",
-    "\n",
-    "for i in range(len(centralities)):\n",
-    "    cent = centralities.values[i]\n",
-    "    if 80 < cent < 100: #výber centralitnej triedy:    \n",
-    "        print(\"hello\")    \n",
-    "        # TODO: Zvýšte Premennú 1 (+1)\n",
-    "            \n",
-    "        for l in range(len(all_tracks_list[i])):\n",
-    "            \n",
-    "            track_pt = float(all_tracks_list[i][l])\n",
-    "            \n",
-    "            # TODO: Prispôsobte pre váš špecifický interval:\n",
-    "            if 0 < track_pt < 1:\n",
-    "                # TODO: print() Akú priečnu hybnosť má tento track?\n",
-    "                # TODO: Zvýšte Premennú 2 (+1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "93a78e1e-3cc6-492e-a0d2-8878b2f4903f",
    "metadata": {},
    "source": [
-     "Tu je celé riešenie:"
+    "# Úloha 2: \n",
+    "\n",
+    "## Počet trackov v danom hybnostnom intervale v pp \n",
+    "\n",
+    "- Zopakujeme veľmi podobný postup ako pre Pb-Pb, kód môžte kopírovať a meniť \n",
+    "\n",
+    "## Úloha 2.1: \n",
+    "\n",
+    "- Načítajte dáta pre zrážky pp zo súboru data_pp.csv \n",
+    "\n",
+    "- Vytvorte polia centralities_pp a all_tracks_list_pp \n",
+    "\n",
+    "- Pomocou for cyklu cez centralities_pp pridajte zoznamy trackov do all_tracks_list_pp (rovnaký kód ako pr Pb-Pb)\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
+    "cell_type": "code",
+    "execution_count": null,
+    "metadata": {},
+    "outputs": [],
+    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-     "n_events = 0\n",
-     "n_tracks = 0\n",
-     "\n",
-     "for i in range(len(centralities)):\n",
-     "    cent = centralities.values[i]\n",
-     "    if 0 < cent < 10: ",
-     "        n_events = n_events + 1\n",
-     "            \n",
-     "        for l in range(len(all_tracks_list[i])):\n",
-     "            track_pt = float(all_tracks_list[i][l])\n",
-     "            if 10 < track_pt < 12:\n",
-     "                print(\"Priečna hybnosť: \", track_pt) \n",
-     "                n_tracks = n_tracks +1"
+    "## Úloha 2.2: \n",
+    "\n",
+    "- Postupujte rovnako ako v úlohe 1 \n",
+    "\n",
+    "- Akú centralitu treba zadať pre pp zrážky? \n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+    "cell_type": "code",
+    "execution_count": null,
+    "metadata": {},
+    "outputs": [],
+    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Úloha 2.3: \n",
+    "\n",
+    "## Priemerný počet trackov v danom hybnostnom intervale v pp v jednej zrážke\n",
+    "\n",
+    "- Vypočítajte priemerný počet trackov v jednej zrážke z premenných v predchádzajúcej bunke a uložte to do novej premennej (podobne ako pre Pb-Pb)\n",
+    "\n",
+    "- Nechajte túto hodnotu vypísať \n"
+
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+    "cell_type": "code",
+    "execution_count": null,
+    "metadata": {},
+    "outputs": [],
+    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Úloha 3: \n",
+    "\n",
+    "## Výpočet nukleárneho modifikačného faktora $R_{AA}$\n",
+    "\n",
+    "Na výpočet je potrebné poznať počet nukleónových kolízií pre danú centralitnú triedu, keďže nukleárny modifikačný faktor je definovaný ako:\n",
+    "\n",
+    "$R_{AA} = \frac{Y_{PbPb}} { N_{coll} Y_{pp} } $ \n",
+    "\n",
+    "Hodnoy $N_{coll}$ sú uvedené v nasledujúcej tabuľke. Použite hodnotu pre zadanú centralitnú triedu a počty trackov na jednu zrážku v PbPb a pp z úlohy 1.1 a 2.3 a vypočítajte $R_{AA}$ \n",
+    "\n",
+    "![Example Image](./NColl.png)"
+   ]
+  },
+  {
+    "cell_type": "code",
+    "execution_count": null,
+    "metadata": {},
+    "outputs": [],
+    "source": []
   }
  ],
  "metadata": {
