--- a/ALICE_RAA_python_uvod.ipynb
+++ b/ALICE_RAA_python_uvod.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Úvod do programovacieho jazyka PYTHON \n",
+    "\n",
     "Jupyter Notebook pozostáva z viacerých buniek, ktoré môžu byť spúšťané samostatne. \n",
     "\n",
     "Bunku možno spustiť stlačením Shift + Enter alebo zvolením možnosti v menu: \"Cell->Run\", potom čo bola označená myšou.\n",
@@ -24,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cvičenie:\n",
+    "## Cvičenie 1:\n",
     "\n",
     "Je definovaná premenná b, ktorej hodnota je 5. Každú premennú vieme nechať vypísať pomocou funkcie print(). Ak by sme ako argument zadali type(b), táto funkcia by nám vypísala, aký je b typ premennej.\n",
     "\n",
@@ -61,33 +63,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "b = 5\n",
-    "print(b)\n",
-    "\n",
-    "a = 3.2\n",
-    "\n",
-    "text = \"Hello World!\"\n",
-    "\n",
-    "c = a * b\n",
-    "\n",
-    "print(c)\n",
-    "\n",
-    "print(2 * a)\n",
-    "print(2 * text)\n",
-    "\n",
-    "print(a+b)\n",
-    "print('a+b')\n",
-    "print(str(a)+'+'+str(b))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,7 +76,7 @@
     "\n",
     "Ak už nie je iná explicitná podmienka, ktorú možno overiť, vykoná sa kód za príkazom 'else' (presne vtedy, ak sú všetky predchádzajúce podmienky nepravdivé).\n",
     "\n",
-    "## Cvičenie:\n",
+    "## Cvičenie 2:\n",
     "Spustite nasledujúci kód a následne nastavte rôzne hodnoty pre premenné 'a' a 'b', aby ste si vyskúšali všetky možnosti:"
    ]
   },
@@ -131,32 +106,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "# definuj a a b nanovo:\n",
-    "\n",
-    "a = 4\n",
-    "b = 4\n",
-    "\n",
-    "if a>b:\n",
-    "    print('a je väčšie ako b')\n",
-    "elif a==b:\n",
-    "    print('a a b sú rovnako veľké')\n",
-    "else:\n",
-    "    print('b je väčšie ako a')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cvičenie:\n",
+    "## Cvičenie 3:\n",
     "\n",
     "S pomocou \n",
     "\n",
@@ -183,25 +136,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "vstup1 = input(\"Zadajte vstup pomocou klávesnice a potvrďte s Enter: \")\n",
-    "vstup2 = input(\"Zadajte vstup pomocou klávesnice a potvrďte s Enter: \")\n",
-    "\n",
-    "print(vstup1, vstup2)\n",
-    "\n",
-    "if( vstup1 == vstup2):\n",
-    "    print(\"Rovnaké vstupy\")\n",
-    "else:\n",
-    "    print(\"Rozdielne vstupy\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,7 +143,7 @@
     "\n",
     "Pomocou for cyklu môže byť časť kódu zopakovaná ľubovoľne veľa krát.\n",
     "\n",
-    "## Cvičenie:\n",
+    "## Cvičenie 4:\n",
     "\n",
     "Vyskúšajte nasledujúci kód\n",
     "\n",
@@ -230,29 +164,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "for i in range (0,15):\n",
-    "       print(i**2)\n",
-    "\n",
-    "print('range:')\n",
-    "x = range(0,15)\n",
-    "print(len(x))\n",
-    "print(x[0])\n",
-    "print(x[1])\n",
-    "print(x[14])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cvičenie:\n",
+    "## Cvičenie 5:\n",
     "\n",
     "Napíšte kód obsahujúci for cyklus a 'if/else' podmienku, kde necháte vypísať druhú mocninu čísel od 0 po 14 spolu s informáciou, či je dané číslo väčšie alebo menšie ako 100. Dávajte pozor na správne zarovnanie."
    ]
@@ -266,24 +181,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(0,15):\n",
-    "    quadrat = i**2\n",
-    "    if( quadrat > 100 ):\n",
-    "        print(str(quadrat) + \" je väčšie ako 100\")\n",
-    "    elif ( quadrat < 100):\n",
-    "        print(str(quadrat) + \" je menšie ako 100\")\n",
-    "    else:\n",
-    "        print(str(quadrat) + \" je rovné 100\")"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -342,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cvičenie:\n",
+    "## Cvičenie 6:\n",
     "\n",
     "- Zadefinujte pole 'dni' pre všetky dni v týždni \n",
     "- Čo sa stane po zadaní nasledujúcich príkazov?:\n",
@@ -362,25 +259,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "solution2": "hidden"
-   },
-   "outputs": [],
-   "source": [
-    "dni = [\"pondelok\", \"utorok\", \"streda\", \"stvrtok\", \"piatok\", \"sobota\", \"nedela\"]\n",
-    "\n",
-    "print(dni[0:3])\n",
-    "print(dni[-3:])\n",
-    "\n",
-    "for z in dni:\n",
-    "    print(z)\n",
-    "    if( z[-2:] == \"ok\"):\n",
-    "        print(\"...končí na OK!\")"
-   ]
   },
   {
    "cell_type": "markdown",
