--- a/ALICE_RAA_kratke_riesenia.ipynb
+++ b/ALICE_RAA_kratke_riesenia.ipynb
@@ -197,7 +197,7 @@
     "            \n",
     "        for l in range(len(all_tracks_list_pp[i])):\n",
     "            # Transverse momentum for each track: track_pt\n",
-    "            track_pt = float(all_tracks_list[i][l])\n",
+    "            track_pt = float(all_tracks_list_pp[i][l])\n",
     "            if 10 < track_pt < 12:\n",
     "                # It's easier to just show the Momentum for the specific events to keep it short\n",
     "                print(\"Event: \", i)  \n",
